2/deploymentconfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  labels:
    app: sample-database
  name: sample-database
  namespace: fiap
spec:
  replicas: 1
  selector:
    name: sample-database
  template:
    metadata:
      labels:
        name: sample-database
    spec:
      volumes:
        - name: sample-database-data
          persistentVolumeClaim:
            claimName: sample-database
      containers:
        - resources:
            limits:
              memory: 1024Mi
          name: postgresql
          ports:
            - containerPort: 5432
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: sample-database-data
              mountPath: /var/lib/pgsql/data
          terminationMessagePolicy: File
          image: postgres:14.2-alpine
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
