2/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: blog-ingress
  namespace: fiap
  labels:
    app: blog-django
    app.kubernetes.io/component: blog-django
    app.kubernetes.io/instance: blog-django
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: blog-django-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi7
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: blog-django
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
---
kind: Service
apiVersion: v1
metadata:
  name: sample-database-service
  namespace: fiap
  labels:
    app: sample-database-service
spec:
  ports:
    - protocol: TCP
      port: 5432
  selector:
    name: sample-database
  type: LoadBalancer
